# banana.nvim

./: .editorconfig  .gitattributes  .gitignore  .lazy.lua  .luarc.json  .prettierrc.json  .tasks.json  CHANGELOG.md  Cargo.toml  DEBUGGING.md  LICENSE  Makefile  NEWS.md  Package.swift  README.md  TODO.md  USAGE.md  actions_init_ts  binding.gyp  build  build.lua  build.sh  components.md  conf.lua  dev.html  gendoc.sh  genzigheaders.sh  gradient.md  grammar.js  init.lua  package.json  pyproject.toml  setup.py  setupdev.sh  test  test.css  test.html  test.ncss  test.nml  test2.html  (+5 more)
banana/: abs.nml  asdf.nml  barrel.nml  calendar.nml  flex.nml  gradient.nml  grid.nml  mini.nml  nth-child.ncss  ooga.nml  other.nml  template.nml  test.nml  test2.nml  yeet.nml
doc/: banana-ast.txt  banana-entities.txt  banana-highlights.txt  banana-home.txt  banana-instance.txt  banana-ncssfunctions.txt  banana-properties.txt  banana-scripting.txt  banana-selectors.txt  banana-tags.txt  banana-templating.txt  tags
examples/: lazy.nml
gendoc/: doc.sh  gendoc.sh  lower.sh  rmtoc.sh
lua/: _test_defs.lua  asdf.lua  asdf2.lua  ffitest.lua  flexStuff.lua
plugin/: commands.lua  filetypes.lua
src/: grammar.json  parser.c
tests/: helpers.lua  init.lua  run  template_spec.lua
tree-sitter-ncss/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-nml/: .gitignore  Cargo.toml  README.md  binding.gyp  bun.lockb  go.mod  grammar.js  grid.nml  package.json  pyproject.toml  setup.py  tree-sitter.json
(+275 files in other folders)
