[package]
name = "tree-sitter-banana-nvim"
description = "BananaNvim grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "banana-nvim"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-banana-nvim"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
